force-app/main/default/objects/AccountTeamMember/fields/BSF_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>BSF_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is added to capture the Portfolio related to the Current Team Member</description>
    <label>BSF Portfolio</label>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>Account Team</relationshipLabel>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>