force-app/main/default/objects/AccountTeamMember/fields/Coverage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Reason__c</fullName>
    <description>Field to capture the vacancy reason on Account Team Member level.</description>
    <label>Coverage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave of Absence (LOA)</fullName>
            </value>
            <value>
                <fullName>Vacant Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>