force-app/main/default/objects/AccountTeamMember/fields/Is_Covering_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Is_Covering_Recruiter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this checkbox if any user is selected as Covering Recruiter.</description>
    <label>Is Covering Recruiter</label>
    <type>Checkbox</type>
</CustomField>